version/0.4/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_semi_resolved_coupling/RAFluentSemiResolvedCoupling.rst.txt






:class:`RAFluentSemiResolvedCoupling`
=====================================


.. py:class:: ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_semi_resolved_coupling.RAFluentSemiResolvedCoupling(id: str, model_id: Optional[str] = ...)

   Bases: :py:obj:`ansys.rocky.core._api_stubs.plugins10.plugins.api.api_element_item.ApiElementItem`





.. py:currentmodule:: RAFluentSemiResolvedCoupling

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetWrappedClass`
            - 
          * - :py:attr:`~GetClassName`
            - 


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SetPartIdIfValid`
            - 
          * - :py:attr:`~SetupDatFilename`
            - 
          * - :py:attr:`~SetupStoreFiles`
            - 
          * - :py:attr:`~GetFluentReleases`
            - 
          * - :py:attr:`~GetFluentVersion`
            - 
          * - :py:attr:`~SetFluentVersion`
            - 
          * - :py:attr:`~GetCouplingFilesKept`
            - 
          * - :py:attr:`~SetCouplingFilesKept`
            - 
          * - :py:attr:`~GetFluentAdditionalArgs`
            - 
          * - :py:attr:`~SetFluentAdditionalArgs`
            - 
          * - :py:attr:`~GetFluentExecutionMode`
            - 
          * - :py:attr:`~SetFluentExecutionMode`
            - 
          * - :py:attr:`~GetValidFluentExecutionModeValues`
            - 
          * - :py:attr:`~GetFluentOutputFrequencyMultiplier`
            - 
          * - :py:attr:`~SetFluentOutputFrequencyMultiplier`
            - 
          * - :py:attr:`~GetFluentSolverProcesses`
            - 
          * - :py:attr:`~SetFluentSolverProcesses`
            - 
          * - :py:attr:`~GetUseDatInitialization`
            - 
          * - :py:attr:`~SetUseDatInitialization`
            - 








Import detail
-------------

.. code-block:: python

    from ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_semi_resolved_coupling import RAFluentSemiResolvedCoupling



Method detail
-------------

.. py:method:: GetWrappedClass() -> type
   :classmethod:


.. py:method:: GetClassName() -> str
   :classmethod:


.. py:method:: SetPartIdIfValid() -> None

.. py:method:: SetupDatFilename(dat_filename: str) -> bool

.. py:method:: SetupStoreFiles(cas_filename: str, case_config: Optional[rocky30coupling.fluent.io.fluent_cas_description.FluentCaseConfig] = ...) -> None

.. py:method:: GetFluentReleases() -> list[str]

.. py:method:: GetFluentVersion() -> str

.. py:method:: SetFluentVersion(fluent_version: str) -> str

.. py:method:: GetCouplingFilesKept() -> int

.. py:method:: SetCouplingFilesKept(value: Union[str, int]) -> None

.. py:method:: GetFluentAdditionalArgs() -> str

.. py:method:: SetFluentAdditionalArgs(value: str) -> None

.. py:method:: GetFluentExecutionMode() -> str

.. py:method:: SetFluentExecutionMode(value: str) -> None

.. py:method:: GetValidFluentExecutionModeValues() -> List[str]

.. py:method:: GetFluentOutputFrequencyMultiplier() -> int

.. py:method:: SetFluentOutputFrequencyMultiplier(value: Union[str, int]) -> None

.. py:method:: GetFluentSolverProcesses() -> int

.. py:method:: SetFluentSolverProcesses(value: Union[str, int]) -> None

.. py:method:: GetUseDatInitialization() -> bool

.. py:method:: SetUseDatInitialization(value: bool) -> None




